--- a/views/voter/vote.ejs
+++ b/views/voter/vote.ejs
@@ -53,12 +53,9 @@
             <h3 class="ballot-header ballot-position">President</h3>
             <br />
             <div id="ballot-president" class="ballot-choices">
-              <!-- Loop through all president candidates, sorted by party name -->
-              <% candidates.filter(candidate => candidate.position === 'president').sort((a, b) => a.party.localeCompare(b.party)).forEach((president, index) => { %>
-
+              <% candidates.filter(candidate => candidate.position.toLowerCase() === 'president') .sort((a, b) => a.party.localeCompare(b.party)) .forEach((president, index) => { %>
               <div class="label-container label-president">
-                <input class="ballot-choice" id="president-<%= index + 1 %>" type="radio" name="president" value="<%= JSON.stringify({ id: president._id, name: president.name, image: president.image, party: president.party, position: president.position, moreInfo: president.moreInfo }) %>" />
-
+                <input class="ballot-choice" id="president-<%= index + 1 %>" type="radio" name="president" value="<%= JSON.stringify(president) %>" />
                 <label class="ballot-tile" for="president-<%= index + 1 %>">
                   <h4 class="party"><%= president.party %></h4>
                   <img class="img-president" src="<%= president.image %>" alt="<%= president.name %>" />
@@ -67,15 +64,12 @@
                   <p class="info"><%= president.moreInfo %></p>
                 </label>
               </div>
-
               <% }); %>
             </div>
 
-            <!-- <input type="checkbox" id="abstain-president" name="president" value="Abstain" />
-            <label for="abstain-president">Abstain</label> -->
-
             <br />
 
+            <!-- Abstain for President -->
             <div class="checkbox-wrapper-10">
               <input type="checkbox" id="abstain-president" name="president" value="Abstain" class="tgl tgl-flip" />
               <label for="abstain-president" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
@@ -87,11 +81,9 @@
             <h3 class="ballot-header ballot-position">Vice President</h3>
             <br />
             <div id="ballot-vice-president" class="ballot-choices">
-              <!-- Loop through all vice president candidates -->
-              <% candidates.filter(candidate => candidate.position === 'vice president').sort((a, b) => a.party.localeCompare(b.party)).forEach((vicePresident, index) => { %>
+              <% candidates.filter(candidate => candidate.position.toLowerCase() === 'vice president') .sort((a, b) => a.party.localeCompare(b.party)) .forEach((vicePresident, index) => { %>
               <div class="label-container label-vice-president">
-                <input class="ballot-choice" id="vice-president-<%= index + 1 %>" type="radio" name="vicePresident" value="<%= JSON.stringify({ id: vicePresident._id, name: vicePresident.name, image: vicePresident.image, party: vicePresident.party, position: vicePresident.position, moreInfo: vicePresident.moreInfo }) %>" />
-
+                <input class="ballot-choice" id="vice-president-<%= index + 1 %>" type="radio" name="vicePresident" value="<%= JSON.stringify(vicePresident) %>" />
                 <label class="ballot-tile" for="vice-president-<%= index + 1 %>">
                   <h4 class="party"><%= vicePresident.party %></h4>
                   <img class="img-vice-president" src="<%= vicePresident.image %>" alt="<%= vicePresident.name %>" />
@@ -104,22 +96,19 @@
             </div>
 
             <br />
+
+            <!-- Abstain for Vice President using provided snippet -->
             <div class="checkbox-wrapper-10">
               <input type="checkbox" id="abstain-vice-president" name="vicePresident" value="Abstain" class="tgl tgl-flip" />
               <label for="abstain-vice-president" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
 
-            <!-- <input type="checkbox" id="abstain-vice-president" name="vicePresident" value="Abstain" />
-            <label for="abstain-vice-president">Abstain</label> -->
-
             <br />
-
             <h3 class="ballot-header ballot-position">Senators</h3>
             <div id="ballot-senator" class="ballot-choices">
-              <% const sortedSenators=candidates .filter(candidate=> candidate.position === 'senator') .sort((a, b) => a.party.localeCompare(b.party)); sortedSenators.forEach((senator, index) => { %>
+              <% const sortedSenators = candidates.filter(candidate => candidate.position.toLowerCase() === 'senator') .sort((a, b) => a.party.localeCompare(b.party)); sortedSenators.forEach((senator, index) => { %>
               <div class="label-container label-senator">
-                <input class="ballot-choice" id="senator-<%= index + 1 %>" type="checkbox" name="senator" value="<%= JSON.stringify({ id: senator._id, name: senator.name, image: senator.image, party: senator.party, position: senator.position, moreInfo: senator.moreInfo }) %>" />
-
+                <input class="ballot-choice" id="senator-<%= index + 1 %>" type="checkbox" name="senator" value="<%= JSON.stringify(senator) %>" />
                 <label class="ballot-tile" for="senator-<%= index + 1 %>">
                   <h4 class="party"><%= senator.party %></h4>
                   <img class="img-senator" src="<%= senator.image %>" alt="<%= senator.name %>" />
@@ -130,7 +119,6 @@
               </div>
               <% }); %>
             </div>
-
             <br />
           </div>
           <br />
@@ -138,16 +126,13 @@
           <div class="ballot ballot-lsc">
             <br />
             <h3 class="ballot-header ballot-council">Local Student Council - <%= voterCollege %></h3>
-            <br />
-            <br />
+            <br /><br />
             <h3 class="ballot-header ballot-position">Governor</h3>
             <br />
             <div id="ballot-governor" class="ballot-choices">
-              <% let governorCandidates = candidates_lsc.filter(candidate => candidate.college === voterCollege && candidate.position === 'governor').sort((a, b) => a.party.localeCompare(b.party)); governorCandidates.forEach((candidate, index) => { %>
-
+              <% let governorCandidates = candidates_lsc.filter(candidate => candidate.position.toLowerCase() === 'governor') .sort((a, b) => a.party.localeCompare(b.party)); governorCandidates.forEach((candidate, index) => { %>
               <div class="label-container label-governor">
-                <input class="ballot-choice" id="governor-<%= index + 1 %>" type="radio" name="governor" value="<%= JSON.stringify({ id: candidate._id, name: candidate.name, image: candidate.image, party: candidate.party, position: candidate.position, moreInfo: candidate.moreInfo }) %>" />
-
+                <input class="ballot-choice" id="governor-<%= index + 1 %>" type="radio" name="governor" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="governor-<%= index + 1 %>">
                   <h4 class="party"><%= candidate.party %></h4>
                   <img class="img-governor" src="<%= candidate.image %>" alt="<%= candidate.name %>" />
@@ -156,27 +141,23 @@
                   <p class="info"><%= candidate.moreInfo %></p>
                 </label>
               </div>
-              <% }) %>
+              <% }); %>
             </div>
-
             <br />
+
+            <!-- Abstain for Governor -->
             <div class="checkbox-wrapper-10">
               <input type="checkbox" id="abstain-governor" name="governor" value="Abstain" class="tgl tgl-flip" />
               <label for="abstain-governor" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
-
-            <!-- <input type="checkbox" id="abstain-governor" name="governor" value="Abstain" />
-              <label for="abstain-governor">Abstain</label> -->
-
             <br />
+
             <h3 class="ballot-header ballot-position">Vice Governor</h3>
             <br />
             <div id="ballot-vice-governor" class="ballot-choices">
-              <% let viceGovernorCandidates = candidates_lsc.filter(candidate => candidate.college === voterCollege && candidate.position === 'vice governor').sort((a, b) => a.party.localeCompare(b.party)); viceGovernorCandidates.forEach((candidate, index) => { %>
-
+              <% let viceGovernorCandidates = candidates_lsc.filter(candidate => candidate.position.toLowerCase() === 'vice governor') .sort((a, b) => a.party.localeCompare(b.party)); viceGovernorCandidates.forEach((candidate, index) => { %>
               <div class="label-container label-vice-governor">
-                <input class="ballot-choice" id="vice-governor-<%= index + 1 %>" type="radio" name="viceGovernor" value="<%= JSON.stringify({ id: candidate._id, name: candidate.name, image: candidate.image, party: candidate.party, position: candidate.position, moreInfo: candidate.moreInfo }) %>" />
-
+                <input class="ballot-choice" id="vice-governor-<%= index + 1 %>" type="radio" name="viceGovernor" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="vice-governor-<%= index + 1 %>">
                   <h4 class="party"><%= candidate.party %></h4>
                   <img class="img-vice-governor" src="<%= candidate.image %>" alt="<%= candidate.name %>" />
@@ -185,27 +166,23 @@
                   <p class="info"><%= candidate.moreInfo %></p>
                 </label>
               </div>
-              <% }) %>
+              <% }); %>
             </div>
-
-            <!-- <input type="checkbox" id="abstain-vice-governor" name="viceGovernor" value="Abstain" />
-            <label for="abstain-vice-governor">Abstain</label> -->
-
             <br />
+
+            <!-- Abstain for Vice Governor -->
             <div class="checkbox-wrapper-10">
-              <input type="checkbox" id="abstain-vice-governor" name="governor" value="Abstain" class="tgl tgl-flip" />
+              <input type="checkbox" id="abstain-vice-governor" name="viceGovernor" value="Abstain" class="tgl tgl-flip" />
               <label for="abstain-vice-governor" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
-
             <br />
+
             <h3 class="ballot-header ballot-position">Board Member</h3>
             <br />
             <div id="ballot-board-member" class="ballot-choices">
-              <% let boardMemberCandidates = lsc_board_members.filter(candidate => candidate.college === voterCollege && candidate.program === voterProgram).sort((a, b) => a.party.localeCompare(b.party)); boardMemberCandidates.forEach((candidate, index) => { %>
-
+              <% // Updated filtering: include candidate if candidate.program is undefined or matches voterProgram. let boardMemberCandidates = lsc_board_members.filter(candidate => { return !candidate.program || candidate.program === voterProgram; }).sort((a, b) => a.party.localeCompare(b.party)); boardMemberCandidates.forEach((candidate, index) => { %>
               <div class="label-container label-board-member">
-                <input class="ballot-choice" id="board-member-<%= index + 1 %>" type="radio" name="boardMember" value="<%= JSON.stringify({ id: candidate._id, name: candidate.name, image: candidate.image, party: candidate.party, position: candidate.position, moreInfo: candidate.moreInfo }) %>" />
-
+                <input class="ballot-choice" id="board-member-<%= index + 1 %>" type="radio" name="boardMember" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="board-member-<%= index + 1 %>">
                   <h4 class="party"><%= candidate.party %></h4>
                   <img class="img-board-member" src="<%= candidate.image %>" alt="<%= candidate.name %>" />
@@ -214,18 +191,15 @@
                   <p class="info"><%= candidate.moreInfo %></p>
                 </label>
               </div>
-              <% }) %>
+              <% // }); %>
             </div>
-
             <br />
+
+            <!-- Abstain for Board Member -->
             <div class="checkbox-wrapper-10">
               <input type="checkbox" id="abstain-board-member" name="boardMember" value="Abstain" class="tgl tgl-flip" />
               <label for="abstain-board-member" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
-
-            <!-- <input type="checkbox" id="abstain-board-member" name="boardMember" value="Abstain" />
-            <label for="abstain-board-member">Abstain</label> -->
-
             <br />
 
             <div>
@@ -234,14 +208,13 @@
               <p><i>You still need to review and confirm your votes in the next page.</i></p>
               <hr />
               <br />
-              <!-- <input type="submit" value="Review Selections" /> -->
-              <button class="continue-application">
+              <button type="submit" class="continue-application">
                 <div>
                   <div class="pencil"></div>
                   <div class="folder">
                     <div class="top">
                       <svg viewBox="0 0 24 27">
-                        <path d="M1,0 L23,0 C23.5522847,-1.01453063e-16 24,0.44771525 24,1 L24,8.17157288 C24,8.70200585 23.7892863,9.21071368 23.4142136,9.58578644 L20.5857864,12.4142136 C20.2107137,12.7892863 20,13.2979941 20,13.8284271 L20,26 C20,26.5522847 19.5522847,27 19,27 L1,27 C0.44771525,27 6.76353751e-17,26.5522847 0,26 L0,1 C-6.76353751e-17,0.44771525 0.44771525,1.01453063e-16 1,0 Z"></path>
+                        <path d="M1,0 L23,0 C23.5522847,0 24,0.44771525 24,1 L24,8.17157288 C24,8.70200585 23.7892863,9.21071368 23.4142136,9.58578644 L20.5857864,12.4142136 C20.2107137,12.7892863 20,13.2979941 20,13.8284271 L20,26 C20,26.5522847 19.5522847,27 19,27 L1,27 C0.44771525,27 0,26.5522847 0,26 L0,1 C0,0.44771525 0.44771525,0 1,0 Z"></path>
                       </svg>
                     </div>
                     <div class="paper"></div>
@@ -267,20 +240,20 @@
     </div>
 
     <script>
+      // Optional: Retain toggleOverlay if visual effects are needed.
       function toggleOverlay(checkboxId, targetClass) {
         document.querySelector(`#${checkboxId}`).addEventListener("change", function () {
           document.querySelectorAll(`.${targetClass}`).forEach((element) => {
             if (this.checked) {
               element.style.position = "relative";
-              element.style.filter = "brightness(50%)"; // Darken the image when abstaining
+              element.style.filter = "brightness(50%)";
             } else {
-              element.style.filter = "brightness(100%)"; // Reset brightness when voting
+              element.style.filter = "brightness(100%)";
             }
           });
         });
       }
 
-      // Example usage:
       toggleOverlay("abstain-president", "label-president");
       toggleOverlay("abstain-vice-president", "label-vice-president");
       toggleOverlay("abstain-governor", "label-governor");
